--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
                                 <div class="nav-links collapse navbar-collapse" id="navbarText">
                                     <ul class="nav-list navbar-nav me-auto mb-2 mb-lg-0">
                                         <li class="nav-item px-2">
-                                            <a class="nav-link {% if request.path == home_url %}active" aria-current="page{% endif %}" href="{% url 'index' %}">Home</a>
+                                            <a class="nav-link {% if request.path == index_url %}active" aria-current="page{% endif %}" href="{% url 'index' %}">Home</a>
                                         </li>
                                         <li class="nav-item px-2">
                                             <a class="nav-link {% if request.path == menu_url %}active" aria-current="page{% endif %}" href="{% url 'menu' %}">Menu</a>
