--- a/templates/base.html
+++ b/templates/base.html
@@ -165,7 +165,7 @@
                     <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
                     <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a>
                     <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
-                    <a href="#" aria-label="Contact us by email"><i class="fa-solid fa-square-envelope"></i></a>                
+                    <a href="{% url 'contact' %}" aria-label="Contact us by email"><i class="fa-solid fa-square-envelope"></i></a>                
                 </div>
             </div>
         </footer>
