--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -13,13 +13,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Roboto Slab', sans-serif;
+    /* Salome */
     background-color: #bed;
     color: #333;
     line-height: 1.6;
 }
 
 header {
+    /* Ocean Ridge */
     background-color: #7694b4;
     padding: 10px 0;
     text-align: center;
@@ -58,7 +60,8 @@ nav .nav-item {
     margin-bottom: 10px;
 }
 
-.btn-primary {
+.btn-primary {    
+    /* Salome */
     background-color: #bed !important;
     color: black;
     border: none;
@@ -66,7 +69,9 @@ nav .nav-item {
 
 .btn-primary:hover,
 .btn-secondary:hover {
+    /* Baby Bunting */
     background-color: #ACCAEB;
+    /* Garnet Black Green */
     color: #364B44;
     text-decoration: underline;
 }
@@ -80,11 +85,13 @@ a {
 }
 
 .dropdown-menu li .active {
+    /* Ocean Ridge */
     background-color: #7694b4;
 }
 
 .dropdown-menu,
 .dropdown-item:hover {
+    /* Salome */
     background-color: #bed;
 }
 
@@ -96,6 +103,7 @@ a {
 
 .card {
     width: 80vw;
+    /* Lovage Green */
     background-color: #98B0A8;
     margin: 10px auto;
 }
@@ -106,6 +114,7 @@ a {
 
 /* About section */
 .about-section {
+    /* Lovage Green */
     background-color: #98B0A8;
     padding: 10px 0;
     margin: 10px 0;
@@ -120,6 +129,7 @@ a {
 
 /* Footer section */
 footer {
+    /* Ocean Ridge */
     background-color: #7694b4;
     color: black;
     text-align: center;
@@ -169,6 +179,7 @@ footer {
 .fa-square-instagram,
 .fa-square-twitter,
 .fa-square-envelope {    
+    /* Garnet Black Green */
     color: #364B44;
     display: flex;
     justify-content: space-around;
@@ -203,6 +214,7 @@ footer {
     }
 
     .navbar-toggler {
+        /* Salome */
         background-color: #bed;
     }
 
@@ -212,6 +224,7 @@ footer {
     }
 
     .nav-links {
+        /* Salome */
         background-color: #bed;
     }
  
