--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,4 +1,6 @@
 {% extends "account/base.html" %}
+{% load static %}
+{% load crispy_forms_tags %}
 
 {% load i18n %}
 {% load account %}
@@ -7,18 +9,27 @@
 
 {% block content %}
 
-    <h1>{% trans "Password Reset" %}</h1>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
+<div class="container-fluid my-2">
+  <div class="password-reset-container card text-center h-auto">
+    <div class="row">
+      <div class="col-md-8 mt-3 offset-md-2"> 
+        <h1 class="card-header my-2">{% trans "Password Reset" %}</h1>
+        {% if user.is_authenticated %}
+        {% include "account/snippets/already_logged_in.html" %}
+        {% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}</p>
+        <p class="text-center py-1">{% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}</p>
 
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
+        <form class="password-reset justify-content-center m-2 p-2" id="password-reset" method="POST" action="{% url 'account_reset_password' %}" class="password-reset">
+            {% csrf_token %}
+            {{ form | crispy }}
+            <input type="submit" value="{% trans 'Reset My Password' %}" />
+        </form>
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+        <p class="text-center py-1">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+      </div>  
+    </div>
+  </div>
+</div>
+
 {% endblock content %}
