--- a/templates/base.html
+++ b/templates/base.html
@@ -122,6 +122,20 @@
             <p class="text-end signup-text m-3">You are not logged in.</p>
             {% endif %}
 
+            <!-- Displaying Django messages -->
+             <div class="container">
+                <div class="row">
+                    <div class="col-md-6 offset-md-2">
+                        {% for message in messages %}
+                        <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
+                            {{ message | safe }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                        {% endfor %}
+                    </div>
+                </div>
+             </div>
+
             {% block content %}
             <!-- Content goes here -->
             {% endblock content %}
