--- a/book_a_table/templates/book_a_table/book_a_table.html
+++ b/book_a_table/templates/book_a_table/book_a_table.html
@@ -23,7 +23,7 @@
                     {% csrf_token %}
                     {{ form | crispy }}
                     <button type="submit" class="book-now-btn btn btn-primary mx-4">Book Now</button>
-                    <a href="{% url 'book_a_table' %}" class="btn btn-secondary mx-4">Cancel</a>
+                    <a href="{{ 'bookings_url' }}" class="btn btn-secondary mx-4">Cancel</a>
                 </form>
             </div>
         </div>
