--- a/book_a_table/templates/book_a_table/edit_bookings.html
+++ b/book_a_table/templates/book_a_table/edit_bookings.html
@@ -1,4 +1,4 @@
-{% {% extends "base.html" %} %}
+{% extends "base.html" %}
 {% load static %}
 {% load crispy_forms_tags %}
 
@@ -23,7 +23,7 @@
                     {% csrf_token %}
                     {{ form | crispy }}
                     <button type="submit" class="action-btn mx-4">Confirm</button>
-                    <a href="{{ bookings_url }}" class="btn action-btn mx-4">Cancel</a>
+                    <a href="{% url 'bookings' %}" class="btn action-btn mx-4">Cancel</a>
                 </form>
             </div>
         </div>
