--- a/book_a_table/templates/book_a_table/delete_bookings.html
+++ b/book_a_table/templates/book_a_table/delete_bookings.html
@@ -26,8 +26,8 @@
                         <p>
                             Booking on {{ booking.date }} at {{ booking.time }} for {{ booking.number_of_guests }}.
                         </p>
-                        <button type="submit" class="action-btn mx-4">Yes, cancel</button>
-                        <a href="{% url 'bookings' %}" class="btn action-btn mx-4">No, go back</a>
+                        <button type="submit" class="action-btn btn btn-primary mx-4">Yes, cancel</button>
+                        <a href="{% url 'bookings' %}" class="btn action-btn btn-secondary mx-4">No, go back</a>
                     </form>
                 </div>
             </div>
