--- a/book_a_table/templates/book_a_table/edit_bookings.html
+++ b/book_a_table/templates/book_a_table/edit_bookings.html
@@ -22,8 +22,8 @@
                 <form method="post" class="page-card-body">
                     {% csrf_token %}
                     {{ form | crispy }}
-                    <button type="submit" class="action-btn mx-4">Confirm</button>
-                    <a href="{% url 'bookings' %}" class="btn action-btn mx-4">Cancel</a>
+                    <button type="submit" class="action-btn btn btn-primary mx-4">Confirm</button>
+                    <a href="{% url 'bookings' %}" class="btn action-btn btn-secondary mx-4">Cancel</a>
                 </form>
             </div>
         </div>
