--- a/templates/base.html
+++ b/templates/base.html
@@ -90,6 +90,19 @@
                                     <li>
                                         <a class="dropdown-item {% if request.path == logout_url %}active" aria-current="page{% endif %}" href="{{ logout_url }}">Logout</a>
                                     </li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li class="bookings">
+                                        {% if user.is_authenticated %}
+                                            <a class="dropdown-item {% if request.path == bookings_url %}active" aria-current="page{% endif %}" href="{% url 'bookings' %}">Bookings</a>
+                                        {% else %}
+                                            <a class="dropdown-item {% if request.path == book_a_table_url %}active" aria-current="page{% endif %}" href="{% url 'book_a_table' %}">Book a Table</a>
+                                        {% endif %}
+                                    </li>      
+                                    <li class="contacts">
+                                        {% if user.is_authenticated %}
+                                            <a class="dropdown-item {% if request.path == contacts_url %}active" aria-current="page{% endif %}" href="{% url 'contacts' %}">Contacts</a>
+                                        {% endif %}
+                                    </li> 
                                     {% else %}
                                     <li>
                                     <a class="dropdown-item {% if request.path == signup_url %}active" aria-current="page{% endif %}" href="{{ signup_url }}">Register</a>
@@ -99,25 +112,7 @@
                                     </li>
                                     {% endif %}
                                 </ul>
-                            </div>
-                            <div class="bookings">
-                                {% if user.is_authenticated %}
-                                <button class="bookings-btn btn btn-primary m-2 p-2">
-                                    <a class="nav-link {% if request.path == bookings_url %}active" aria-current="page{% endif %}" href="{% url 'bookings' %}">Bookings</a>
-                                </button>
-                                {% else %}
-                                <button class="book-a-table-btn btn btn-primary m-2 p-2">
-                                    <a class="nav-link {% if request.path == book_a_table_url %}active" aria-current="page{% endif %}" href="{% url 'book_a_table' %}">Book a Table</a>
-                                </button>
-                                {% endif %}
-                            </div>      
-                            <div class="contacts">
-                                {% if user.is_authenticated %}
-                                <button class="contacts-btn btn btn-primary m-2 p-2">
-                                    <a class="nav-link {% if request.path == contacts_url %}active" aria-current="page{% endif %}" href="{% url 'contacts' %}">Contacts</a>
-                                </button>                                
-                                {% endif %}
-                            </div>                      
+                            </div>    
                         </div>
                     </div>
                     
