--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -243,7 +243,7 @@ footer {
         font-size: .75rem;
     }
 
-    .book-now-btn .btn-primary {
+    .book-now-btn, .btn-primary {
         margin-bottom: 1.5rem;
     }
     
@@ -260,6 +260,13 @@ footer {
     .signup-btn {
         font-size: .85rem;
     }
+}
+
+@media screen and (min-width: 425px) {
+    /* Main section */
+    .book-now-btn, .btn-primary {
+        margin-bottom: 0;
+    }  
 }
 
 @media screen and (min-width: 768px) {
