Remove titles, blank script and empty comment tag

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
 <html class="h-100" lang="en">
     <head>
         <meta charset="utf-8">
@@ -158,7 +158,7 @@
                 </div>
                 <!-- Address -->
                 <div class="contact-us col-12 col-md-6 col-lg-3">
-                    <h5 classs="contact-title">Contact Us</h5>
+                    <h5>Contact Us</h5>
                     <p class="contact-text contact-address">25 Restaurant Street, London, NW1 4BY</p>
                     <p class="contact-text contact-telephone">Tel: 020 2025 1504</p>
                     <!-- 
@@ -174,9 +174,9 @@
                 </div>
                 <!-- Opening and Serving Times -->
                 <div class="times col-12 col-md-6 col-lg-3">
-                    <h5 classs="opening-time-title">Opening Times</h5>
+                    <h5>Opening Times</h5>
                     <p class="time-text opening-times">Mon - Sun: 12pm - 10pm</p>
-                    <h5 classs="serving-time-title">Serving Times</h5>
+                    <h5>Serving Times</h5>
                     <p class="time-text serving-times">Mon - Sun: 12pm - 9pm</p>
                 </div> 
                 <!-- Footer Social -->
@@ -195,7 +195,5 @@
 
         <!-- Font Awesome kit -->
         <script src="https://kit.fontawesome.com/b8fa29ed25.js" crossorigin="anonymous"></script>
-
-        <script src="" async defer></script>
     </body>
 </html>
