--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -12,6 +12,10 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 10px;
 }
 
+h2 {
+    font-size: 1.5rem;
+}
+
 body {
     font-family: 'Roboto Slab', sans-serif;
     /* Salome */
