--- a/contact/templates/contact/contacts.html
+++ b/contact/templates/contact/contacts.html
@@ -13,7 +13,7 @@
     {% endfor %}
 </div>
 
-<!-- Bookings using Bootstrap 5.3.0 -->
+<!-- Contacts using Bootstrap 5.3.0 -->
 <div class="container-fluid my-2">
     <div class="card">
         <h2 class="card-header text-center mb-4">Contacts</h2>
@@ -21,14 +21,12 @@
             <div class="row g-3 justify-content-center text-center">
                 
                 <div class="contacts-summary">
-                    <!-- Welcome user and display upcoming bookings -->
+                    <!-- Welcome user and display of contacts from users -->
                      <p>Welcome {{ user.username }}. These are the people who have contacted the restaurant</p>
                      <a href="#collapse-contacts" class="btn action-btn mb-3 px-2 py-2" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapse-contacts">View Contacts</a>
                 </div>
 
-                <div id="collapse-contacts" class="collapse container-fluid my-2">
-                    <!-- If superuser, only admin to see details -->
-                    <!--{% if user.is_superuser %}-->
+                <div id="collapse-contacts" class="collapse container-fluid my-2">                    
                     <!-- Table of contacts  -->
                     <table class="table page-card-body">
                         <thead>
@@ -51,7 +49,6 @@
                             {% endfor %}
                         </tbody>  
                     </table>
-                    <!--{% endif %}  -->
                 </div>
             </div>
         </div>
